# Babel

./: .gitignore  CMakeLists.txt  build_windows.sh  conanfile.txt
Backup/: CMakeLists.txt
Backup/Source/: Client.cpp  Client.h  Main.cpp  Message.cpp  Message.h  Packet.h  Participant.h  Room.cpp  Room.h  Server.cpp  Server.h  Session.cpp  Session.h  User.cpp  User.h
Client/: AudioManager.cpp  AudioManager.h  AudioThread.cpp  AudioThread.h  BabelException.cpp  BabelException.h  BabelString.cpp  ClientCrypto.cpp  ClientCrypto.h  CommonCrypto.cpp  CommonCrypto.h  CryptoException.cpp  CryptoException.h  EncodeManager.cpp  EncodeManager.h  GlobalSession.h  Message.h  Packet.cpp  Packet.h  Voice.h  VoiceThread.cpp  VoiceThread.h  assets.qrc  call.cpp  call.h  call.ui  client.cpp  client.h  home.ui  incall.cpp  incall.h  incall.ui  login.cpp  login.h  login.ui  main.cpp  moc_login.cpp  moc_login.cpp_parameters  receive.cpp  receive.h  (+4 more)
Libraries/openssl/linux/lib/: libcrypto.so.1.1  libssl.so.1.1
Source/: BabelException.cpp  BabelException.h  BabelString.cpp  BabelString.h  Call.cpp  Call.h  Client.cpp  Client.h  ClientCrypto.cpp  ClientCrypto.h  ClientException.cpp  ClientException.h  ClientSession.cpp  ClientSession.h  Command.h  CommandLexer.cpp  CommandLexer.h  CommonCrypto.cpp  CommonCrypto.h  Connection.cpp  Connection.hpp  CryptoException.cpp  CryptoException.h  Logger.cpp  Logger.h  Main.cpp  Message.cpp  Message.h  NetworkException.cpp  NetworkException.h  Packet.cpp  Packet.h  Room.cpp  Room.h  Server.cpp  Server.h  Server.hpp  ServerCrypto.cpp  ServerCrypto.h  ServerException.cpp  (+7 more)
